@@ -1,6 +1,6 @@
 var utils = require("./utils"),
     urlMap = require("./urlmap"),
-    route = require("./route");
+    router = require("./router");
 
 module.exports = buildMiddleware;
 
@@ -10,7 +10,7 @@ module.exports = buildMiddleware;
  * middleware they want to use in the order they will be called in the request
  * cycle.
  *
- * Instances of this middleware also have all methods from the urlMap and route
+ * Instances of this middleware also have all methods from the urlMap and router
  * middlewares in order to simplify the number of steps needed to build an app
  * complete with a middleware pipeline, URL prefix mapping, and routing.
  *
@@ -102,13 +102,13 @@ function buildMiddleware(app) {
         locations[location] = callback;
     };
 
-    // Add the ability to call route functions. When one is called, instantiate
+    // Add the ability to call router functions. When one is called, instantiate
     // the localRoute variable and call the function on that object.
 
     ["route", "get", "post", "put", "delete", "head", "options"].forEach(function (method) {
         build[method] = function () {
             if (localRoute == null) {
-                localRoute = route();
+                localRoute = router();
                 app = localRoute;
             }
 
@@ -121,7 +121,7 @@ function buildMiddleware(app) {
      */
     build.run = function (localApp) {
         // If the user has already called one of the routing methods, then
-        // delegate to the route.
+        // delegate to the router.
         if (localRoute) {
             localRoute.run(localApp);
         } else {
