@@ -395,7 +395,7 @@ var modules = {
     "lint": "lint",
     "methodOverride": "methodoverride",
     "rewrite": "rewrite",
-    "route": "route",
+    "router": "router",
     "sessionCookie": "session/cookie",
     "timeout": "servertimeout",
     // Other
