@@ -1,7 +1,7 @@
 var strata = require("./index"),
     utils = require("./utils");
 
-module.exports = routeMiddleware;
+module.exports = routerMiddleware;
 
 /**
  * A middleware that provides pattern-based routing for URL's, with optional
@@ -9,7 +9,7 @@ module.exports = routeMiddleware;
  * `env.route` with an object containing the results of the match for all
  * downstream apps.
  *
- *   var app = strata.route();
+ *   var app = strata.router();
  *
  *   app.get("/", function (env, callback) {
  *       callback(200, {}, "Welcome home!");
@@ -30,12 +30,12 @@ module.exports = routeMiddleware;
  *
  * Note: All routes are tried in the order they were defined.
  */
-function routeMiddleware(app) {
+function routerMiddleware(app) {
     app = app || utils.notFound;
 
     var routes = {};
 
-    function route(env, callback) {
+    function router(env, callback) {
         var method = env.requestMethod;
         var localRoutes = (routes[method] || []).concat(routes.ANY || []);
         var tryRoute = tryRoutes(localRoutes, env, callback, app);
@@ -52,7 +52,7 @@ function routeMiddleware(app) {
      * matches one of those methods. Otherwise, the route is not restricted to a
      * certain request method.
      */
-    route.route = function (pattern, app, methods) {
+    router.route = function (pattern, app, methods) {
         methods = methods || ["ANY"];
 
         if (typeof methods === "string") {
@@ -95,7 +95,7 @@ function routeMiddleware(app) {
 
     for (var method in methods) {
         (function (verbs) {
-            route[method] = function (pattern, app) {
+            router[method] = function (pattern, app) {
                 this.route(pattern, app, verbs);
             };
         })(methods[method]);
@@ -104,11 +104,11 @@ function routeMiddleware(app) {
     /**
      * Specifies the app to run when no routes match.
      */
-    route.run = function (localApp) {
+    router.run = function (localApp) {
         app = localApp;
     };
 
-    return route;
+    return router;
 }
 
 function tryRoutes(routes, env, callback, defaultApp) {
